# ai-security-guardrails

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
cli/: main.py  scan_prompt.py  verifier.py
docs/: ai-security-model.md  overview.md
docs/prompts/: ai_security_prompts.md
examples/: openai_guarded_client.py
guardrails/: __init__.py  audit.py  cli.py  input_scanner.py  llm_guard.py  output_filter.py  policy.py  policy_engine.py  policy_loader.py  schemas.py
middleware/: __init__.py  fastapi.py  fastapi_guardrails.py  fastapi_middleware.py  request_size_limit.py
policies/: custom_regex_rules.example.yaml  default_policy.json  default_policy.yaml
rag/: sanitize_docs.py
schemas/: __init__.py  audit.py  events.py  security_event.py
security/: audit_logging.py  logger.py  startup_validation.py  tool_validator.py
tests/: __init__.py  test_action_auditor.py  test_adversarial_input_detector.py  test_audit_hash_chain.py  test_audit_log_hash_chain.py  test_audit_schema_version_guard.py  test_cli.py  test_content_type_allowlist.py  test_correlation_id_propagation.py  test_data_leakage_detector.py  test_decision_code_audit_event.py  test_exfiltration_detector.py  test_fastapi_middleware.py  test_fastapi_request_body_size_guard.py  test_guardrails.py  test_input_scanner_unicode_normalization.py  test_input_validator.py  test_jailbreak_detector.py  test_memory_inspector.py  test_middleware_request_size.py  test_output_filter.py  test_output_pipeline.py  test_output_secret_detection.py  test_policy_decision_latency.py  test_policy_decision_reason_code.py  test_policy_digest_audit_event.py  test_policy_engine.py  test_policy_loader.py  test_policy_loader_fail_closed.py  test_policy_loader_missing_default.py  test_policy_loader_permissions.py  test_policy_owner_guard.py  test_policy_permissions.py  test_policy_reason_code_startup_validation.py  test_policy_symlink_startup.py  test_prompt_injection.py  test_rag_poisoning_detector.py  test_redactor.py  test_regex_rules.py  test_startup_policy_load_failed_audit.py  (+4 more)
(+26 files in other folders)
